// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inject given component, when rendering Inject, renders component with injected dependencies 1`] = `
<div
  data-some-prop-test="true"
>
  Some content: "some-synchronous-dependency-value"
</div>
`;

exports[`Inject given nested Injects, renders 1`] = `
<div
  data-some-root-prop-test="true"
>
  Some root content: "some-root-dependency-value"
  <div
    data-some-nested-prop-test="true"
  >
    Some nested content: "some-nested-dependency-value"
  </div>
</div>
`;

exports[`Inject given no placeholder and nested Injects with an async dependency renders with default placeholder 1`] = `
<div
  data-some-root-prop-test="true"
>
  Some root content: "some-root-dependency-value"
</div>
`;

exports[`Inject given no placeholder and nested Injects with an async dependency when the async dependency resolves, renders 1`] = `
<div
  data-some-root-prop-test="true"
>
  Some root content: "some-root-dependency-value"
  <div
    data-some-nested-prop-test="true"
  >
    Some async content: "some-async-dependency-value"
  </div>
</div>
`;

exports[`Inject given placeholder and nested Injects with an async dependency renders with the placeholder 1`] = `
<div
  data-some-root-prop-test="true"
>
  Some root content: "some-root-dependency-value"some-placeholder
</div>
`;

exports[`Inject given placeholder and nested Injects with an async dependency when the async dependency resolves, renders 1`] = `
<div
  data-some-root-prop-test="true"
>
  Some root content: "some-root-dependency-value"
  <div
    data-some-nested-prop-test="true"
  >
    Some async content: "some-async-dependency-value"
  </div>
</div>
`;
